--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "digital-solutions---sales-funnel-chatbot",
+  "name": "dgital-soluctions-ai",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "npx serve -s dist"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "1.38.0",
-    "lucide-react": "0.460.0",
-    "@sqlitecloud/drivers": "1.0.0"
+    "@google/genai": "^1.38.0",
+    "@sqlitecloud/drivers": "^1.0.0",
+    "lucide-react": "^0.460.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3",
+    "serve": "^14.2.4"
   }
 }
